[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  |  python-sc2
  | jsonpickle
  | Bots
  | sc2pathlib
)/
'''

[tool.poetry]
name = "sharpy-sc2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "sharpy/**/*.py" },
    { include = "jsonpickle/**/*.py" },
    { include = "sc2pathlib/*.py" },
]

[tool.poetry.dependencies]
python = "~3.8"
burnysc2 = {git = "https://github.com/BurnySc2/python-sc2.git", rev = "53fd67a" }
s2clientprotocol = "^5.0.7"
numpy = "^1.19.3"
scipy = "^1.7.1"
aiohttp = "^3.7.4"
loguru = "^0.5.3"
portpicker = "^1.4.0"
pyglet = "^1.5.21"
mpyq = "^0.2.5"
typing-extensions = "^3.10.0"
win32-setctime = "^1.0.3"
importlib-metadata = "<=2.1.0"
six = "1.16.0"
opencv-python = "4.5.3.56"
more-itertools = "7.2.0"
scikit-learn = "0.24.2"

[tool.poetry.dev-dependencies]
pytest = "5.4.1"
pytest-asyncio = "0.11.0"
pytest-pythonpath = "0.7.3"
flake8 = "3.7.9"
black = "19.10b0"
pre-commit = "2.2.0"
Pillow = "^9.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
